@startuml
class User{
    -id (PK)
    -username
    -fullName
    -password
    -role
}

enum Role {
    ADMIN
    CUSTOMER

}


class ShopingCart {
 - id (pk)
 -IDUser (FK)
 -IDProduct (FK)
 - quantity
 -date
}



class Product {
   -id (PK)
   -categoriaID (FK)
   -name
   -price
   -quantity
   -description
   -categoria
}




class Category {
    - id (PK)
    - name
}

class Invoice {
  - id (PK)
  - IDUser (FK)
  - Date
  - TotalValue
  - PayMethod


}

class ProductInvoice {
 - id (PK)
 - IDInvoice (FK)
 - IDProduct (FK)
 - Quantity

}

User "1" --> "1" ShopingCart

ShopingCart "1" --> "*" Product
User "*" --> "1" Role
User "1" --> "*" Invoice



Product "*" --> "1" Category



ProductInvoice "*" --> "1" Product
ProductInvoice "*" --> "1" Invoice
@enduml